--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 <html>
 <head>
 
-<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<STYLE type="text/css">
+
+	
 	
 	body {
+	
+font-family: Arial, Helvetica, sans-serif;
 
 /* Ubicación de la imagen */
 
@@ -40,71 +42,48 @@ de fondo o si hay problemas para cargarla */
 
 background-color: #66999;
 
+
+
 }
 
-/* Style the navigation menu */
+/* Position the navbar container inside the image */
+.container {
+  position: absolute;
+  margin: 20px;
+  width: auto;
+}
+
+/* The navbar */
 .topnav {
   overflow: hidden;
   background-color: #333;
-  position: relative;
 }
 
-/* Hide the links inside the navigation menu (except for logo/home) */
-.topnav #myLinks {
-  display: block;
-}
-
-/* Style navigation menu links */
+/* Navbar links */
 .topnav a {
-  color: white;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  display: block;
 }
 
-/* Style the hamburger menu */
-.topnav a.icon {
-  background: black;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-/* Add a grey background color on mouse-over */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Style the active link (or home/logo) */
-.active {
-  //background-color: #4CAF50;
-  color: white;
-}
-
     </STYLE>
 </head>
 <body>
-
-
-<!-- Top Navigation Menu -->
-<div class="topnav">
-  <a href="#home" class="active">Logo</a>
-  <!-- Navigation links (hidden by default) -->
-  <div id="myLinks">
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+  <div class="container">
+    <div class="topnav">
+      <a href="docs/RACIONES - Bar Restaurante Casa Isabel.pdf">Raciones</a>
+      <a href="docs/CARTA - Bar Restaurante Casa Isabel.pdf">Carta Restaurante</a>
+      <a href="#contact">Contacto</a>
+    </div>
   </div>
-  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
-
-
 </body>
 
 </html>
