--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
 <head>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<STYLE type="text/css">
 
@@ -42,48 +42,82 @@ de fondo o si hay problemas para cargarla */
 
 background-color: #66999;
 
-
-
 }
 
-/* Position the navbar container inside the image */
-.container {
-  position: absolute;
-  margin: 20px;
-  width: auto;
-}
-
-/* The navbar */
+/* Style the navigation menu */
 .topnav {
   overflow: hidden;
   background-color: #333;
+  position: relative;
 }
 
-/* Navbar links */
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: block;
+}
+
+/* Style navigation menu links */
 .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
+  color: white;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  display: block;
 }
 
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-    </STYLE>
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+
+
+
+</style>
+
+    <script>
+	/*menu / bar icon */
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
 </head>
-<body>
-  <div class="container">
-    <div class="topnav">
-      <a href="docs/RACIONES - Bar Restaurante Casa Isabel.pdf">Raciones</a>
-      <a href="docs/CARTA - Bar Restaurante Casa Isabel.pdf">Carta Restaurante</a>
-      <a href="#contact">Contacto</a>
-    </div>
+<body><!-- Top Navigation Menu -->
+<div class="topnav">
+  <a href="#home" class="active">SELECCIONA</a>
+  <!-- Navigation links (hidden by default) -->
+  <div id="myLinks">
+    <a href="docs/RACIONES - Bar Restaurante Casa Isabel.pdf">Raciones</a>
+    <a href="docs/CARTA - Bar Restaurante Casa Isabel.pdf">Carta</a>
   </div>
+  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+ 
+  
 </body>
 
 </html>
