Cambio en nombre menú

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ function myFunction() {
 </head>
 <body><!-- Top Navigation Menu -->
 <div class="topnav">
-  <a href="#home" class="active">SELECCIONA</a>
+  <a href="#home" class="active">Bar - Restaurante Casa Isabel</a>
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
     <a href="docs/RACIONES - Bar Restaurante Casa Isabel.pdf">Raciones</a>
